--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -114,16 +114,25 @@ services:
     extends: dev
     command: sleep infinity
 
-  kasmvnc:
-    runtime: ${RUNTIME}
-    container_name: kasmvnc
-    image: ghcr.io/linuxserver/baseimage-kasmvnc:alpine318
-    privileged: true
+  webtop:
+    image: lscr.io/linuxserver/webtop:latest
+    container_name: webtop
+    security_opt:
+      - seccomp:unconfined
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Etc/UTC
+      - SUBFOLDER=/
+      - TITLE=Webtop
+      - DISPLAY=:200
     network_mode: host
     volumes:
+      - /path/to/data:/config
+      - /var/run/docker.sock:/var/run/docker.sock
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
       - $HOME/.Xauthority:/root/.Xauthority
-    environment:
-      - DISPLAY=:200
     devices:
       - /dev/dri:/dev/dri
+    shm_size: "1gb"
+    restart: unless-stopped
