--- a/docker/sim.yaml
+++ b/docker/sim.yaml
@@ -6,7 +6,7 @@ tmux_options: -f $HOME/.config/tmuxinator/eztmux/.tmux.conf
 windows:
   - main:
       panes:
-      - docker compose up kasmvnc
+      - docker compose up webtop
       - docker compose up gazebo
       - docker compose up navigate-sim
 
