--- a/linorobot2_gazebo/package.xml
+++ b/linorobot2_gazebo/package.xml
@@ -17,6 +17,13 @@
     <exec_depend>geometry_msgs</exec_depend>
     <exec_depend>image_proc</exec_depend>
     <exec_depend>depth_image_proc</exec_depend>
+    <exec_depend>python-trimesh-pip</exec_depend>
+    <exec_depend>python3-numpy</exec_depend>
+    <exec_depend>python3-pycollada</exec_depend>
+    <exec_depend>python3-scipy</exec_depend>
+    <exec_depend>python3-networkx</exec_depend>
+    <exec_depend>python3-opencv-contrib-python</exec_depend>
+    <exec_depend>python3-matplotlib</exec_depend>
     <export>
         <build_type>ament_cmake</build_type>
     </export>
