modified to run on JNano, ESP32 with custom settings

--- a/linorobot2_base/config/ekf.yaml
+++ b/linorobot2_base/config/ekf.yaml
@@ -1,6 +1,6 @@
 ekf_filter_node:
     ros__parameters:
-        frequency: 50.0
+        frequency: 10.0
         two_d_mode: true
         publish_tf: true
  
@@ -8,6 +8,9 @@ ekf_filter_node:
         odom_frame: odom            
         base_link_frame: base_footprint 
         world_frame: odom 
+        transform_time_offset: 0.0
+        transform_timeout: 0.1
+
 
         #x     , y     , z,
         #roll  , pitch , yaw,
@@ -27,3 +30,4 @@ ekf_filter_node:
                       false, false, false,
                       false, false, true,
                       false, false, false]
+
