--- a/linorobot2_gazebo/package.xml
+++ b/linorobot2_gazebo/package.xml
@@ -12,7 +12,7 @@
     <buildtool_depend>ament_cmake</buildtool_depend>
     <buildtool_depend>ament_cmake_python</buildtool_depend>
     <exec_depend>robot_localization</exec_depend>
-    <exec_depend>gazebo_ros_pkgs</exec_depend>
+    <exec_depend>ros_gz_sim</exec_depend>
     <exec_depend>rclpy</exec_depend>
     <exec_depend>geometry_msgs</exec_depend>
     <exec_depend>image_proc</exec_depend>
