--- a/linorobot2_navigation/config/navigation.yaml
+++ b/linorobot2_navigation/config/navigation.yaml
@@ -1,6 +1,6 @@
 amcl:
   ros__parameters:
-    use_sim_time: false
+    use_sim_time: False
     alpha1: 0.2
     alpha2: 0.2
     alpha3: 0.2
@@ -18,8 +18,8 @@ amcl:
     laser_min_range: -1.0
     laser_model_type: "likelihood_field"
     max_beams: 60
-    max_particles: 3000
-    min_particles: 1000
+    max_particles: 2000
+    min_particles: 500
     odom_frame_id: "odom"
     pf_err: 0.05
     pf_z: 0.99
@@ -30,9 +30,9 @@ amcl:
     save_pose_rate: 0.5
     sigma_hit: 0.2
     tf_broadcast: true
-    transform_tolerance: 0.1
+    transform_tolerance: 1.0
     update_min_a: 0.1
-    update_min_d: 0.1
+    update_min_d: 0.15
     z_hit: 0.5
     z_max: 0.05
     z_rand: 0.5
@@ -41,21 +41,21 @@ amcl:
 
 amcl_map_client:
   ros__parameters:
-    use_sim_time: false
+    use_sim_time: False
 
 amcl_rclcpp_node:
   ros__parameters:
-    use_sim_time: false
+    use_sim_time: False
 
 bt_navigator:
   ros__parameters:
-    use_sim_time: false
+    use_sim_time: False
     global_frame: map
     robot_base_frame: base_link
     odom_topic: /odom
     bt_loop_duration: 10
     default_server_timeout: 20
-    enable_groot_monitoring: true
+    enable_groot_monitoring: True
     groot_zmq_publisher_port: 1666
     groot_zmq_server_port: 1667
     plugin_lib_names:
@@ -93,11 +93,11 @@ bt_navigator:
 
 bt_navigator_rclcpp_node:
   ros__parameters:
-    use_sim_time: false
+    use_sim_time: False
 
 controller_server:
   ros__parameters:
-    use_sim_time: false
+    use_sim_time: False
     controller_frequency: 20.0
     min_x_velocity_threshold: 0.002
     min_y_velocity_threshold: 0.5
@@ -115,10 +115,10 @@ controller_server:
 
     # Goal checker parameters
     general_goal_checker:
-      stateful: true
+      stateful: True
       plugin: "nav2_controller::SimpleGoalChecker"
-      xy_goal_tolerance: 0.10
-      yaw_goal_tolerance: 0.10
+      xy_goal_tolerance: 0.25
+      yaw_goal_tolerance: 0.25
     # DWB parameters
     FollowPath:
       plugin: "nav2_rotation_shim_controller::RotationShimController"
@@ -129,14 +129,13 @@ controller_server:
       simulate_ahead_time: 1.0
       plugin: "dwb_core::DWBLocalPlanner"
       debug_trajectory_details: True
-      min_vel_x: 0.1
+      min_vel_x: 0.0
       min_vel_y: 0.0
-      min_vel_theta: 0.1
-      max_vel_x: 0.5
+      max_vel_x: 0.4
       max_vel_y: 0.0
       max_vel_theta: 0.75
-      min_speed_xy: 0.01
-      max_speed_xy: 0.5
+      min_speed_xy: 0.075
+      max_speed_xy: 0.4
       min_speed_theta: 0.0
       # Add high threshold velocity for turtlebot 3 issue.
       # https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues/75
@@ -146,17 +145,17 @@ controller_server:
       decel_lim_x: -2.5
       decel_lim_y: 0.0
       decel_lim_theta: -3.2
-      vx_samples: 20
+      vx_samples: 25
       vy_samples: 5
       vtheta_samples: 20
       sim_time: 1.7
       linear_granularity: 0.05
       angular_granularity: 0.025
-      transform_tolerance: 0.1
+      transform_tolerance: 0.3
       xy_goal_tolerance: 0.15
       trans_stopped_velocity: 0.25
-      short_circuit_trajectory_evaluation: true
-      stateful: true
+      short_circuit_trajectory_evaluation: True
+      stateful: True
       critics: ["RotateToGoal", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist"]
       BaseObstacle.scale: 0.02
       PathAlign.scale: 32.0
@@ -171,23 +170,23 @@ controller_server:
       
 controller_server_rclcpp_node:
   ros__parameters:
-    use_sim_time: false
+    use_sim_time: False
 
 global_costmap:
   global_costmap:
     ros__parameters:
-      use_sim_time: false
+      use_sim_time: False
       footprint_padding: 0.03
       update_frequency: 1.0
       publish_frequency: 1.0
       global_frame: map
       robot_base_frame: base_link
-      robot_radius: 0.22 # radius set and used, so no footprint points
+      robot_radius: 0.11 # radius set and used, so no footprint points
       resolution: 0.05
       plugins: ["static_layer", "obstacle_layer", "voxel_layer", "inflation_layer"]
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
-        enabled: true
+        enabled: True
         observation_sources: scan base_scan
         footprint_clearing_enabled: true
         max_obstacle_height: 2.0
@@ -200,8 +199,8 @@ global_costmap:
           raytrace_min_range: 0.0
           max_obstacle_height: 2.0
           min_obstacle_height: 0.0
-          clearing: true
-          marking: true
+          clearing: True
+          marking: True
           data_type: "LaserScan"
           inf_is_valid: false
         base_scan:
@@ -212,16 +211,16 @@ global_costmap:
           raytrace_min_range: 0.0
           max_obstacle_height: 2.0
           min_obstacle_height: 0.0
-          clearing: true
-          marking: true
+          clearing: True
+          marking: True
           data_type: "LaserScan"
           inf_is_valid: false
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
-        enabled: true
+        enabled: True
         footprint_clearing_enabled: true
         max_obstacle_height: 2.0
-        publish_voxel_map: true
+        publish_voxel_map: True
         origin_z: 0.0
         z_resolution: 0.05
         z_voxels: 16
@@ -231,35 +230,35 @@ global_costmap:
         observation_sources: pointcloud
         combination_method: 1
         pointcloud:  # no frame set, uses frame from message
-          topic: /camera/depth/color/points
+          topic: /camera/downsampled/depth/pointcloud
           max_obstacle_height: 2.0
           min_obstacle_height: 0.01
           obstacle_max_range: 2.5
           obstacle_min_range: 0.0
           raytrace_max_range: 3.0
           raytrace_min_range: 0.0
-          clearing: true
-          marking: true
+          clearing: True
+          marking: True
           data_type: "PointCloud2"
       static_layer:
         plugin: "nav2_costmap_2d::StaticLayer"
-        map_subscribe_transient_local: true
+        map_subscribe_transient_local: True
         enabled: true
         subscribe_to_updates: true
         transform_tolerance: 0.3
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         enabled: true
-        inflation_radius: 0.15
+        inflation_radius: 0.55
         cost_scaling_factor: 1.0
         inflate_unknown: false
         inflate_around_unknown: true
-      always_send_full_costmap: true
+      always_send_full_costmap: True
 
 local_costmap:
   local_costmap:
     ros__parameters:
-      use_sim_time: false
+      use_sim_time: False
       update_frequency: 5.0
       publish_frequency: 2.0
       global_frame: odom
@@ -268,12 +267,12 @@ local_costmap:
       width: 3
       height: 3
       resolution: 0.05
-      robot_radius: 0.11 # radius set and used, so no footprint points
+      robot_radius: 0.22 # radius set and used, so no footprint points
       resolution: 0.05
       plugins: ["obstacle_layer", "voxel_layer", "inflation_layer"]
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
-        enabled: true
+        enabled: True
         observation_sources: scan base_scan
         footprint_clearing_enabled: true
         max_obstacle_height: 2.0
@@ -286,8 +285,8 @@ local_costmap:
           raytrace_min_range: 0.0
           max_obstacle_height: 2.0
           min_obstacle_height: 0.0
-          clearing: false
-          marking: true
+          clearing: False
+          marking: True
           data_type: "LaserScan"
           inf_is_valid: false
         base_scan:
@@ -298,16 +297,16 @@ local_costmap:
           raytrace_min_range: 0.0
           max_obstacle_height: 2.0
           min_obstacle_height: 0.0
-          clearing: false
-          marking: true
+          clearing: False
+          marking: True
           data_type: "LaserScan"
           inf_is_valid: false
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
-        enabled: true
+        enabled: True
         footprint_clearing_enabled: true
         max_obstacle_height: 2.0
-        publish_voxel_map: true
+        publish_voxel_map: True
         origin_z: 0.0
         z_resolution: 0.05
         z_voxels: 16
@@ -317,19 +316,19 @@ local_costmap:
         observation_sources: pointcloud
         combination_method: 1
         pointcloud:  # no frame set, uses frame from message
-          topic: /camera/depth/color/points
+          topic: /camera/downsampled/depth/pointcloud
           max_obstacle_height: 2.0
           min_obstacle_height: 0.01
           obstacle_max_range: 2.5
           obstacle_min_range: 0.0
           raytrace_max_range: 3.0
           raytrace_min_range: 0.0
-          clearing: true
-          marking: true
+          clearing: True
+          marking: True
           data_type: "PointCloud2"
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        enabled: true
+        enabled: True
         inflation_radius: 0.55
         cost_scaling_factor: 1.0
         inflate_unknown: false
@@ -337,21 +336,21 @@ local_costmap:
 
 map_server:
   ros__parameters:
-    use_sim_time: false
+    use_sim_time: False
     yaml_filename: "turtlebot3_world.yaml"
 
 map_saver:
   ros__parameters:
-    use_sim_time: false
+    use_sim_time: False
     save_map_timeout: 5.0
     free_thresh_default: 0.25
     occupied_thresh_default: 0.65
-    map_subscribe_transient_local: true
+    map_subscribe_transient_local: True
 
 planner_server:
   ros__parameters:
     expected_planner_frequency: 20.0
-    use_sim_time: false
+    use_sim_time: False
     planner_plugins: ["GridBased"]
     GridBased:
       plugin: "nav2_navfn_planner/NavfnPlanner"
@@ -361,7 +360,7 @@ planner_server:
 
 planner_server_rclcpp_node:
   ros__parameters:
-    use_sim_time: false
+    use_sim_time: False
 
 recoveries_server:
   ros__parameters:
@@ -378,7 +377,7 @@ recoveries_server:
     global_frame: odom
     robot_base_frame: base_link
     transform_timeout: 0.1
-    use_sim_time: false
+    use_sim_time: False
     simulate_ahead_time: 2.0
     max_rotational_vel: 1.0
     min_rotational_vel: 0.4
@@ -386,7 +385,7 @@ recoveries_server:
 
 robot_state_publisher:
   ros__parameters:
-    use_sim_time: false
+    use_sim_time: False
 
 waypoint_follower:
   ros__parameters:
@@ -395,19 +394,5 @@ waypoint_follower:
     waypoint_task_executor_plugin: "wait_at_waypoint"   
     wait_at_waypoint:
       plugin: "nav2_waypoint_follower::WaitAtWaypoint"
-      enabled: true
+      enabled: True
       waypoint_pause_duration: 200
-
-velocity_smoother:
-  ros__parameters:
-    smoothing_frequency: 20.0
-    scale_velocities: False
-    feedback: "OPEN_LOOP"
-    max_velocity: [0.5, 0.0, 2.5]
-    min_velocity: [-0.5, 0.0, -2.5]
-    max_accel: [2.5, 0.0, 3.2]
-    max_decel: [-2.5, 0.0, -3.2]
-    odom_topic: "odom"
-    odom_duration: 0.1
-    deadband_velocity: [0.0, 0.0, 0.0]
-    velocity_timeout: 1.0
